--- a/src/FastFit/level-2/1 - dataset_prep.ipynb
+++ b/src/FastFit/level-2/1 - dataset_prep.ipynb
@@ -21,18 +21,18 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 207 entries, 7 to 206\n",
+      "Index: 167 entries, 164 to 166\n",
       "Data columns (total 6 columns):\n",
       " #   Column        Non-Null Count  Dtype  \n",
       "---  ------        --------------  -----  \n",
-      " 0   url           207 non-null    object \n",
-      " 1   text          207 non-null    object \n",
-      " 2   relevance     207 non-null    object \n",
-      " 3   multiclasses  207 non-null    object \n",
-      " 4   predictions   207 non-null    object \n",
-      " 5   score-lv1     207 non-null    float64\n",
+      " 0   url           167 non-null    object \n",
+      " 1   text          167 non-null    object \n",
+      " 2   relevance     167 non-null    object \n",
+      " 3   multiclasses  167 non-null    object \n",
+      " 4   predictions   167 non-null    object \n",
+      " 5   score-lv1     167 non-null    float64\n",
       "dtypes: float64(1), object(5)\n",
-      "memory usage: 11.3+ KB\n"
+      "memory usage: 9.1+ KB\n"
      ]
     },
     {
@@ -66,27 +66,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>https://www.zooreach.org/ZOO_WILD_Activities/2...</td>\n",
-       "      <td>n o i t a v r e s Non Flowering Plants - Algae...</td>\n",
-       "      <td>irrelevant</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>relevant</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>https://yosemite.org/wp-content/uploads/2020/0...</td>\n",
-       "      <td>HONEY BEE (Scientific name: Apis) Bees and oth...</td>\n",
-       "      <td>irrelevant</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>relevant</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>https://www.zooreach.org/ZOO_WILD_Activities/2...</td>\n",
-       "      <td>n o i t a The Western Ghats or 'Sahyadris' is ...</td>\n",
+       "      <th>164</th>\n",
+       "      <td>https://www.worldmosquitoprogram.org/sites/def...</td>\n",
+       "      <td>Special Issue: Honoring Yukihiro Ozaki Applied...</td>\n",
        "      <td>irrelevant</td>\n",
        "      <td>[]</td>\n",
        "      <td>relevant</td>\n",
@@ -94,17 +76,35 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>https://www.wyomingwildsheep.org/wp-content/up...</td>\n",
-       "      <td>R ESTORATION AND R ESTORATION AND MANAGEMENT O...</td>\n",
+       "      <td>https://yearofthesalmon.org/wp-content/uploads...</td>\n",
+       "      <td>International Year of the Salmon Synthesis Sym...</td>\n",
        "      <td>irrelevant</td>\n",
        "      <td>[]</td>\n",
        "      <td>relevant</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>https://files.worldwildlife.org/wwfcmsprod/fil...</td>\n",
-       "      <td>PLOW 0 2 0 PRINT 2 orld Wildlife Fund’s 2020 P...</td>\n",
+       "      <th>1</th>\n",
+       "      <td>https://digitalarchive.worldfishcenter.org/bit...</td>\n",
+       "      <td>Use of Genetically Improved and Alien Species ...</td>\n",
+       "      <td>irrelevant</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>relevant</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>http://yoderlab.org/cms/wp-content/uploads/201...</td>\n",
+       "      <td>Implications of lemuriform extinctions for the...</td>\n",
+       "      <td>irrelevant</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>relevant</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>http://assets.worldwildlife.org/publications/8...</td>\n",
+       "      <td>REPORT INT 2015 Living Blue Planet Report Spec...</td>\n",
        "      <td>irrelevant</td>\n",
        "      <td>[]</td>\n",
        "      <td>relevant</td>\n",
@@ -115,26 +115,26 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                 url  \\\n",
-       "7  https://www.zooreach.org/ZOO_WILD_Activities/2...   \n",
-       "1  https://yosemite.org/wp-content/uploads/2020/0...   \n",
-       "3  https://www.zooreach.org/ZOO_WILD_Activities/2...   \n",
-       "0  https://www.wyomingwildsheep.org/wp-content/up...   \n",
-       "4  https://files.worldwildlife.org/wwfcmsprod/fil...   \n",
+       "                                                   url  \\\n",
+       "164  https://www.worldmosquitoprogram.org/sites/def...   \n",
+       "0    https://yearofthesalmon.org/wp-content/uploads...   \n",
+       "1    https://digitalarchive.worldfishcenter.org/bit...   \n",
+       "2    http://yoderlab.org/cms/wp-content/uploads/201...   \n",
+       "3    http://assets.worldwildlife.org/publications/8...   \n",
        "\n",
-       "                                                text   relevance multiclasses  \\\n",
-       "7  n o i t a v r e s Non Flowering Plants - Algae...  irrelevant           []   \n",
-       "1  HONEY BEE (Scientific name: Apis) Bees and oth...  irrelevant           []   \n",
-       "3  n o i t a The Western Ghats or 'Sahyadris' is ...  irrelevant           []   \n",
-       "0  R ESTORATION AND R ESTORATION AND MANAGEMENT O...  irrelevant           []   \n",
-       "4  PLOW 0 2 0 PRINT 2 orld Wildlife Fund’s 2020 P...  irrelevant           []   \n",
+       "                                                  text   relevance  \\\n",
+       "164  Special Issue: Honoring Yukihiro Ozaki Applied...  irrelevant   \n",
+       "0    International Year of the Salmon Synthesis Sym...  irrelevant   \n",
+       "1    Use of Genetically Improved and Alien Species ...  irrelevant   \n",
+       "2    Implications of lemuriform extinctions for the...  irrelevant   \n",
+       "3    REPORT INT 2015 Living Blue Planet Report Spec...  irrelevant   \n",
        "\n",
-       "  predictions  score-lv1  \n",
-       "7    relevant        1.0  \n",
-       "1    relevant        1.0  \n",
-       "3    relevant        1.0  \n",
-       "0    relevant        1.0  \n",
-       "4    relevant        1.0  "
+       "    multiclasses predictions  score-lv1  \n",
+       "164           []    relevant        1.0  \n",
+       "0             []    relevant        1.0  \n",
+       "1             []    relevant        1.0  \n",
+       "2             []    relevant        1.0  \n",
+       "3             []    relevant        1.0  "
       ]
      },
      "execution_count": 2,
@@ -167,11 +167,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3962910/3614861073.py:9: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
+      "/tmp/ipykernel_87741/3614861073.py:9: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
       "  data.append(pd.read_json(os.path.join(path, subdir,f'{subdir}.json'),orient='records')[['url','text','relevance','multiclasses']])\n",
-      "/tmp/ipykernel_3962910/3614861073.py:9: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
+      "/tmp/ipykernel_87741/3614861073.py:9: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
       "  data.append(pd.read_json(os.path.join(path, subdir,f'{subdir}.json'),orient='records')[['url','text','relevance','multiclasses']])\n",
-      "/tmp/ipykernel_3962910/3614861073.py:9: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
+      "/tmp/ipykernel_87741/3614861073.py:9: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
       "  data.append(pd.read_json(os.path.join(path, subdir,f'{subdir}.json'),orient='records')[['url','text','relevance','multiclasses']])\n"
      ]
     },
@@ -236,18 +236,18 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 8803 entries, 0 to 8802\n",
+      "RangeIndex: 8763 entries, 0 to 8762\n",
       "Data columns (total 6 columns):\n",
       " #   Column        Non-Null Count  Dtype  \n",
       "---  ------        --------------  -----  \n",
-      " 0   url           8803 non-null   object \n",
-      " 1   text          8803 non-null   object \n",
-      " 2   relevance     8803 non-null   object \n",
-      " 3   multiclasses  8803 non-null   object \n",
-      " 4   predictions   207 non-null    object \n",
-      " 5   score-lv1     207 non-null    float64\n",
+      " 0   url           8763 non-null   object \n",
+      " 1   text          8763 non-null   object \n",
+      " 2   relevance     8763 non-null   object \n",
+      " 3   multiclasses  8763 non-null   object \n",
+      " 4   predictions   167 non-null    object \n",
+      " 5   score-lv1     167 non-null    float64\n",
       "dtypes: float64(1), object(5)\n",
-      "memory usage: 412.8+ KB\n"
+      "memory usage: 410.9+ KB\n"
      ]
     }
    ],
@@ -273,7 +273,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "207\n"
+      "167\n"
      ]
     }
    ],
