--- a/src/Preprocessing/cleaners/scraped_cleaning.ipynb
+++ b/src/Preprocessing/cleaners/scraped_cleaning.ipynb
@@ -881,7 +881,7 @@
     }
    ],
    "source": [
-    "#! Not all URLs are valid, some get 404-ed. Filter out invalid ones with a test response\n",
+    "#* Not all URLs are valid, some get 404-ed. Filter out invalid ones with a test response\n",
     "import requests\n",
     "\n",
     "def is_valid_url(url):\n",
