--- a/src/scripts/workflow.ipynb
+++ b/src/scripts/workflow.ipynb
@@ -158,10 +158,9 @@
    ],
    "source": [
     "!python preprocess.py \\\n",
-    "    --use-default-paths \\\n",
     "    --scrape-studies \\\n",
     "    --scrape-spreadsheet \\\n",
-    "\n"
+    "    --use-default-paths"
    ]
   },
   {
@@ -251,9 +250,9 @@
    "source": [
     "!python train.py \\\n",
     "    --model CuML \\\n",
-    "    --data-path='../../data/level-0.5/data.json' \\\n",
-    "    --output-path='./models/level-1/cuML_classifier.pkl' \\\n",
-    "    --timer\n"
+    "    --data-path=../../data/level-0.5/data.json \\\n",
+    "    --output-path=./models/level-1/cuML_classifier.pkl \\\n",
+    "    --timer"
    ]
   },
   {
@@ -359,13 +358,13 @@
    ],
    "source": [
     "!python predict.py \\\n",
-    "    --model='CuML' \\\n",
-    "    --model-path='./models/level-1/cuML_classifier.pkl' \\\n",
-    "    --data-path='../../data/level-0.5/irrelevant.json' \\\n",
-    "    --output-path='../../results/' \\\n",
+    "    --model=CuML \\\n",
+    "    --model-path=./models/level-1/cuML_classifier.pkl \\\n",
+    "    --data-path=../../data/level-0.5/irrelevant.json \\\n",
+    "    --output-path=../../results/level-1.5 \\\n",
     "    --level 1 \\\n",
     "    --save-top 200 \\\n",
-    "    --timer\n"
+    "    --timer"
    ]
   },
   {
@@ -713,10 +712,10 @@
    ],
    "source": [
     "!python predict.py \\\n",
-    "    --model='FastFit' \\\n",
-    "    --model-path='./models/level-2/avsolatorio/GIST-Embedding-v0' \\\n",
-    "    --data-path='../../data/level-1.5/potential.json' \\\n",
-    "    --output-path='../../results/level-2.5/' \\\n",
+    "    --model=FastFit \\\n",
+    "    --model-path=./models/level-2/avsolatorio/GIST-Embedding-v0 \\\n",
+    "    --data-path=../../data/level-1.5/potential.json \\\n",
+    "    --output-path=../../results/level-2.5/ \\\n",
     "    --save-top 200 \\\n",
     "    --level 2 \\\n",
     "    --timer"
@@ -798,9 +797,9 @@
    "source": [
     "!python train.py \\\n",
     "    --model FastFit \\\n",
-    "    --data-path='../../data/level-0.5/data.json' \\\n",
-    "    --embedding-model='avsolatorio/GIST-Embedding-v0' \\\n",
-    "    --output-path='./models/level-2/' \\\n",
+    "    --data-path=../../data/level-0.5/data.json \\\n",
+    "    --embedding-model=avsolatorio/GIST-Embedding-v0 \\\n",
+    "    --output-path=./models/level-2/ \\\n",
     "    --chunk-size 512 \\\n",
     "    --batch-size 32 \\\n",
     "    --samples-per-label 100000 \\\n",
