warning message for remove-files

--- a/src/scripts/workflow.ipynb
+++ b/src/scripts/workflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -12,23 +12,18 @@
       "\n",
       "\n",
       "\n",
-      "Using default paths:\n",
-      "Irrelevant: ../../data/unprocessed/irrelevant/\n",
-      "Spreadsheet: ../../data/unprocessed/spreadsheet.json\n",
-      "Synopses: ../../data/unprocessed/synopses/\n",
-      "Studies: ../../data/unprocessed/studies.json\n",
+      "\n",
+      "\u001b[1m************ WARNING ************\u001b[0m\n",
       "\n",
       "\n",
+      "You are about to clean irrelevant data. This process will remove all irrelevant data from the provided path, and combine them into a single file in level-0.5. \n",
+      "If the original batch files are not backed up, \u001b[1mthey will be lost\u001b[0m. Only proceed if this is intended.\n",
       "\n",
-      "Cleaning irrelevant data.\n",
-      "Loading ~10000 files...\n",
-      " 86%|███████████████████████████████▋     | 8556/10000 [00:13<00:02, 634.52it/s]\n",
       "\n",
-      "8556 irrelevant articles loaded. \n",
-      "Removing corrupt files...\n",
-      "Removed 0 broken JSON files.\n",
-      "Saving irrelevant data...\n",
-      "Irrelevant data saved.\n"
+      " \u001b[1m********************************\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1mAre you sure you want to proceed?\u001b[0m The process will begin in 5 seconds; \u001b[1mterminate it now if needed\u001b[0m.\r"
      ]
     }
    ],
@@ -36,7 +31,31 @@
     "!python preprocess.py \\\n",
     "    --use-default-paths \\\n",
     "    --only-irrelevant \\\n",
-    "    --limit-irrelevant 10000"
+    "    --limit-irrelevant 10000 \\"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qwe\n",
+      "asd\n",
+      "rty\n",
+      "fgh\n"
+     ]
+    }
+   ],
+   "source": [
+    "from time import sleep\n",
+    "\n",
+    "print('qwe\\nasd\\nzxc',end='\\r')\n",
+    "sleep(1)\n",
+    "print('rty\\nfgh')"
    ]
   },
   {
