--- a/src/scripts/workflow.ipynb
+++ b/src/scripts/workflow.ipynb
@@ -2,7 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "1\n",
+      "0\n",
+      "NVIDIA GeForce RTX 3090\n",
+      "True\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "print(torch.cuda.is_available())\n",
+    "print(torch.cuda.device_count())\n",
+    "print(torch.cuda.current_device())\n",
+    "print(torch.cuda.get_device_name(0))\n",
+    "print(torch.cuda.is_initialized())\n",
+    "print(torch.cuda.memory_allocated())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "Using default paths:\n",
+      "Irrelevant: ../../data/unprocessed/irrelevant/\n",
+      "Spreadsheet: ../../data/unprocessed/spreadsheet.json\n",
+      "Synopses: ../../data/unprocessed/synopses/\n",
+      "Studies: ../../data/unprocessed/studies.json\n",
+      "\n",
+      "\n",
+      "\n",
+      "Cleaning irrelevant data.\n",
+      "Loading ~30000 files...\n",
+      "  0%|                                                 | 0/30000 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "!sh ./t.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +81,7 @@
       "\n",
       "Cleaning irrelevant data.\n",
       "Loading ~10000 files...\n",
-      " 86%|███████████████████████████████▋     | 8556/10000 [00:13<00:02, 633.55it/s]\n",
+      " 86%|███████████████████████████████▋     | 8556/10000 [00:13<00:02, 612.00it/s]\n",
       "\n",
       "8556 irrelevant articles loaded. \n",
       "Removing corrupt files...\n",
@@ -41,17 +100,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  File \"/workspace/GreyLit/GreyLiteratureClassifier/src/scripts/train.py\", line 95\n",
-      "    )train = stratified_sample(train, num_samples_per_label=samples_per_label\n",
-      "    ^\n",
-      "SyntaxError: unmatched ')'\n"
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Loading data...\n",
+      "\n",
+      "/usr/local/lib/python3.10/dist-packages/cudf/utils/_ptxcompiler.py:61: UserWarning: Error getting driver and runtime versions:\n",
+      "\n",
+      "stdout:\n",
+      "\n",
+      "\n",
+      "\n",
+      "stderr:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/numba/cuda/cudadrv/driver.py\", line 254, in ensure_initialized\n",
+      "    self.cuInit(0)\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/numba/cuda/cudadrv/driver.py\", line 327, in safe_cuda_api_call\n",
+      "    self._check_ctypes_error(fname, retcode)\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/numba/cuda/cudadrv/driver.py\", line 395, in _check_ctypes_error\n",
+      "    raise CudaAPIError(retcode, msg)\n",
+      "numba.cuda.cudadrv.driver.CudaAPIError: [100] Call to cuInit results in CUDA_ERROR_NO_DEVICE\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<string>\", line 4, in <module>\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/numba/cuda/cudadrv/driver.py\", line 292, in __getattr__\n",
+      "    self.ensure_initialized()\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/numba/cuda/cudadrv/driver.py\", line 258, in ensure_initialized\n",
+      "    raise CudaSupportError(f\"Error at driver init: {description}\")\n",
+      "numba.cuda.cudadrv.error.CudaSupportError: Error at driver init: Call to cuInit results in CUDA_ERROR_NO_DEVICE (100)\n",
+      "\n",
+      "\n",
+      "Not patching Numba\n",
+      "  warnings.warn(msg, UserWarning)\n",
+      "/usr/local/lib/python3.10/dist-packages/cudf/utils/gpu_utils.py:149: UserWarning: No NVIDIA GPU detected\n",
+      "  warnings.warn(\"No NVIDIA GPU detected\")\n",
+      "/usr/local/lib/python3.10/dist-packages/cudf/io/json.py:108: UserWarning: Using CPU via Pandas to read JSON dataset, this may be GPU accelerated in the future\n",
+      "  warnings.warn(\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/workspace/GreyLitDocker/src/scripts/train.py\", line 160, in <module>\n",
+      "    main(**vars(args))\n",
+      "  File \"/workspace/GreyLitDocker/src/scripts/train.py\", line 134, in main\n",
+      "    train_cuML(**kwargs)\n",
+      "  File \"/workspace/GreyLitDocker/src/scripts/train.py\", line 38, in train_cuML\n",
+      "    data = pd.read_json(input_path, encoding='latin-1')\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/cudf/io/json.py\", line 140, in read_json\n",
+      "    df = cudf.from_pandas(pd_value)\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/nvtx/nvtx.py\", line 116, in inner\n",
+      "    result = func(*args, **kwargs)\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/cudf/core/dataframe.py\", line 8065, in from_pandas\n",
+      "    return DataFrame.from_pandas(obj, nan_as_null=nan_as_null)\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/nvtx/nvtx.py\", line 116, in inner\n",
+      "    result = func(*args, **kwargs)\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/cudf/core/dataframe.py\", line 5376, in from_pandas\n",
+      "    data = {\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/cudf/core/dataframe.py\", line 5377, in <dictcomp>\n",
+      "    col_name: column.as_column(\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/cudf/core/column/column.py\", line 1951, in as_column\n",
+      "    return as_column(\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/cudf/core/column/column.py\", line 1832, in as_column\n",
+      "    col = ColumnBase.from_arrow(arbitrary)\n",
+      "  File \"/usr/local/lib/python3.10/dist-packages/cudf/core/column/column.py\", line 386, in from_arrow\n",
+      "    result = libcudf.interop.from_arrow(data)[0]\n",
+      "  File \"/usr/lib/python3.10/contextlib.py\", line 79, in inner\n",
+      "    return func(*args, **kwds)\n",
+      "  File \"interop.pyx\", line 162, in cudf._lib.interop.from_arrow\n",
+      "  File \"/usr/lib/python3.10/functools.py\", line 889, in wrapper\n",
+      "    return dispatch(args[0].__class__)(*args, **kw)\n",
+      "  File \"interop.pyx\", line 88, in cudf._lib.pylibcudf.interop._from_arrow_table\n",
+      "RuntimeError: Fatal CUDA error encountered at: /__w/cudf/cudf/cpp/src/bitmask/null_mask.cu:93: 100 cudaErrorNoDevice no CUDA-capable device is detected\n"
      ]
     }
    ],
