final run before training GIST-Large

--- a/src/scripts/workflow.ipynb
+++ b/src/scripts/workflow.ipynb
@@ -2,61 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "1\n",
-      "0\n",
-      "NVIDIA GeForce RTX 3090\n",
-      "True\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import torch\n",
+    "def recommended_batch_size(model_size, max_tokens):\n",
+    "    # for GIST-Embedding-v0\n",
+    "    gist_difficulty = 0.41 * 512\n",
+    "    difficulty = model_size * max_tokens\n",
     "\n",
-    "print(torch.cuda.is_available())\n",
-    "print(torch.cuda.device_count())\n",
-    "print(torch.cuda.current_device())\n",
-    "print(torch.cuda.get_device_name(0))\n",
-    "print(torch.cuda.is_initialized())\n",
-    "print(torch.cuda.memory_allocated())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      "Using default paths:\n",
-      "Irrelevant: ../../data/unprocessed/irrelevant/\n",
-      "Spreadsheet: ../../data/unprocessed/spreadsheet.json\n",
-      "Synopses: ../../data/unprocessed/synopses/\n",
-      "Studies: ../../data/unprocessed/studies.json\n",
-      "\n",
-      "\n",
-      "\n",
-      "Cleaning irrelevant data.\n",
-      "Loading ~30000 files...\n",
-      "  0%|                                                 | 0/30000 [00:00<?, ?it/s]"
-     ]
-    }
-   ],
-   "source": [
-    "!sh ./t.sh"
+    "    return gist_difficulty / difficulty * 64"
    ]
   },
   {
