--- a/src/scripts/workflow.ipynb
+++ b/src/scripts/workflow.ipynb
@@ -2,16 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: train.py [-h] [--model MODEL] [--data-path DATA_PATH]\n",
+      "                [--output-path OUTPUT_PATH] [--test-frac TEST_FRAC]\n",
+      "                [--seed SEED] [--vectorizer VECTORIZER] [--timer]\n",
+      "                [--embedding-model EMBEDDING_MODEL] [--chunk-size CHUNK_SIZE]\n",
+      "                [--samples-per-label SAMPLES_PER_LABEL]\n",
+      "                [--batch-size BATCH_SIZE]\n",
+      "\n",
+      "options:\n",
+      "  -h, --help            show this help message and exit\n",
+      "  --model MODEL         Type of model to train\n",
+      "  --data-path DATA_PATH\n",
+      "                        Path to data\n",
+      "  --output-path OUTPUT_PATH\n",
+      "                        Path to save model\n",
+      "  --test-frac TEST_FRAC\n",
+      "                        Fraction of data to use for testing\n",
+      "  --seed SEED           Random seed\n",
+      "  --vectorizer VECTORIZER\n",
+      "                        Vectorizer to use\n",
+      "  --timer               Time the training process\n",
+      "  --embedding-model EMBEDDING_MODEL\n",
+      "                        Embedding model to use. Only used if --model is\n",
+      "                        EMBEDDINGS or FASTFIT\n",
+      "  --chunk-size CHUNK_SIZE\n",
+      "                        Size of chunks to process data in. Only used if\n",
+      "                        --model is EMBEDDINGS or FASTFIT\n",
+      "  --samples-per-label SAMPLES_PER_LABEL\n",
+      "                        Number of samples to use per label. Leave excluded for\n",
+      "                        uncapped. Only used if --model is EMBEDDINGS or\n",
+      "                        FASTFIT\n",
+      "  --batch-size BATCH_SIZE\n",
+      "                        Batch size for training. Only used if --model is\n",
+      "                        EMBEDDINGS or FASTFIT\n"
+     ]
+    }
+   ],
    "source": [
-    "def recommended_batch_size(model_size, max_tokens):\n",
-    "    # for GIST-Embedding-v0\n",
-    "    gist_difficulty = 0.41 * 512\n",
-    "    difficulty = model_size * max_tokens\n",
-    "\n",
-    "    return gist_difficulty / difficulty * 64"
+    "!python train.py -h"
    ]
   },
   {
@@ -867,40 +902,12 @@
    "source": [
     "!python predict.py \\\n",
     "    --model=FastFit \\\n",
-    "    --model-path=./models/level-2/avsolatorio/GIST-Embedding-v0 \\\n",
+    "    --model-path=./models/level-2/avsolatorio/GIST-large-Embedding-v0 \\\n",
     "    --data-path=../../data/level-1.5/potential.json \\\n",
     "    --output-path=../../results/level-2.5/ \\\n",
-    "    --save-top 200 \\\n",
-    "    --batch-size 128 \\\n",
-    "    --level 2 \\\n",
-    "    --timer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  File \"/workspace/GreyLit/GreyLiteratureClassifier/src/scripts/train.py\", line 95\n",
-      "    )train = stratified_sample(train, num_samples_per_label=samples_per_label\n",
-      "    ^\n",
-      "SyntaxError: unmatched ')'\n"
-     ]
-    }
-   ],
-   "source": [
-    "!python train.py \\\n",
-    "    --model FastFit \\\n",
-    "    --data-path=../../data/level-0.5/data.json \\\n",
-    "    --embedding-model=avsolatorio/GIST-small-Embedding-v0 \\\n",
-    "    --output-path=./models/level-2/ \\\n",
-    "    --chunk-size 512 \\\n",
+    "    --save-top 50 \\\n",
     "    --batch-size 64 \\\n",
-    "    --samples-per-label 10000 \\\n",
+    "    --level 2 \\\n",
     "    --timer"
    ]
   },
@@ -929,34 +936,6 @@
     "    --chunk-size 512 \\\n",
     "    --batch-size 16 \\\n",
     "    --samples-per-label 1000 \\\n",
-    "    --timer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  File \"/workspace/GreyLit/GreyLiteratureClassifier/src/scripts/train.py\", line 95\n",
-      "    )train = stratified_sample(train, num_samples_per_label=samples_per_label\n",
-      "    ^\n",
-      "SyntaxError: unmatched ')'\n"
-     ]
-    }
-   ],
-   "source": [
-    "!python train.py \\\n",
-    "    --model FastFit \\\n",
-    "    --data-path=../../data/level-0.5/data.json \\\n",
-    "    --embedding-model=avsolatorio/NoInstruct-small-Embedding-v0 \\\n",
-    "    --output-path=./models/level-2/ \\\n",
-    "    --chunk-size 512 \\\n",
-    "    --batch-size 64 \\\n",
-    "    --samples-per-label 100000 \\\n",
     "    --timer"
    ]
   }
